[gd_scene load_steps=11 format=4 uid="uid://dirh805o8mns6"]

[ext_resource type="Script" uid="uid://duqm27iwnwsbs" path="res://scenes/soccer.gd" id="1_sxi5j"]
[ext_resource type="PackedScene" uid="uid://ccwbwi5kswpoy" path="res://players/player_1Soccer.tscn" id="2_sxi5j"]
[ext_resource type="PackedScene" uid="uid://b80io4qgrcuv2" path="res://players/player_2Soccer.tscn" id="3_sxi5j"]
[ext_resource type="TileSet" uid="uid://dtkpj3cwv2y8e" path="res://sprites/tiles.tres" id="4_slvla"]
[ext_resource type="Texture2D" uid="uid://c7je1j8wq8ini" path="res://sprites/background.png" id="5_gmt2b"]
[ext_resource type="Texture2D" uid="uid://3rxnklw7382i" path="res://sprites/soccerball.png" id="6_sxi5j"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1aicq"]
size = Vector2(20, 40)

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_sxi5j"]
bounce = 0.75

[sub_resource type="CircleShape2D" id="CircleShape2D_slvla"]
radius = 4.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sxi5j"]
size = Vector2(280, 184)

[node name="Soccer" type="Node"]
script = ExtResource("1_sxi5j")

[node name="Label" type="Label" parent="."]
offset_left = 180.0
offset_top = 97.0
offset_right = 220.0
offset_bottom = 120.0

[node name="Label3" type="Label" parent="."]
z_index = 8
offset_left = 420.0
offset_top = 97.0
offset_right = 460.0
offset_bottom = 120.0
horizontal_alignment = 2

[node name="player1" parent="." instance=ExtResource("2_sxi5j")]
position = Vector2(235, 199)
collision_mask = 19

[node name="player2" parent="." instance=ExtResource("3_sxi5j")]
position = Vector2(405, 199)
collision_mask = 35

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAASABAAAAAAAAAAAAASABEAAAAAAAAAAAASABIAAAAAAAAAAAASABMAAAAAAAAAAAASABQAAAAAAAAAAAASABUAAAAAAAAAAAASABYAAAAAAAAAAAASABcAAAAAAAAAAAASABgAAAAAAAAAAAASABkAAAAAAAAAAAASABoAAAAAAAAAAAASABsAAAAAAAAAAAASABwAAAAAAAAAAAASAB0AAAAAAAAAAAATAB0AAAAAAAAAAAAUAB0AAAAAAAAAAAAVAB0AAAAAAAAAAAAWAB0AAAAAAAAAAAAXAB0AAAAAAAAAAAAYAB0AAAAAAAAAAAAZAB0AAAAAAAAAAAAaAB0AAAAAAAAAAAAbAB0AAAAAAAAAAAAcAB0AAAAAAAAAAAAdAB0AAAAAAAAAAAASAA8AAAAAAAAAAAASAA4AAAAAAAAAAAASAA0AAAAAAAAAAAASAAwAAAAAAAAAAAATAAwAAAAAAAAAAAAUAAwAAAAAAAAAAAAVAAwAAAAAAAAAAAAWAAwAAAAAAAAAAAAXAAwAAAAAAAAAAAAYAAwAAAAAAAAAAAAZAAwAAAAAAAAAAAAaAAwAAAAAAAAAAAAbAAwAAAAAAAAAAAAcAAwAAAAAAAAAAAAdAAwAAAAAAAAAAAAtAAwAAAAEAAAAAAAtAA0AAAAEAAAAAAAtAA4AAAAEAAAAAAAtAA8AAAAEAAAAAAAtABAAAAAEAAAAAAAtABEAAAAEAAAAAAAtABIAAAAEAAAAAAAtABMAAAAEAAAAAAAtABQAAAAEAAAAAAAtABUAAAAEAAAAAAAtABYAAAAEAAAAAAAtABcAAAAEAAAAAAAtABgAAAAEAAAAAAAtABkAAAAEAAAAAAAtABoAAAAEAAAAAAAtABsAAAAEAAAAAAAtABwAAAAEAAAAAAAtAB0AAAAEAAAAAAAsAB0AAAAEAAAAAAArAB0AAAAEAAAAAAAqAB0AAAAEAAAAAAApAB0AAAAEAAAAAAAoAB0AAAAEAAAAAAAnAB0AAAAEAAAAAAAmAB0AAAAEAAAAAAAlAB0AAAAEAAAAAAAkAB0AAAAEAAAAAAAjAB0AAAAEAAAAAAAiAB0AAAAEAAAAAAAsAAwAAAAEAAAAAAArAAwAAAAEAAAAAAAqAAwAAAAEAAAAAAApAAwAAAAEAAAAAAAoAAwAAAAEAAAAAAAnAAwAAAAEAAAAAAAmAAwAAAAEAAAAAAAlAAwAAAAEAAAAAAAkAAwAAAAEAAAAAAAjAAwAAAAEAAAAAAAiAAwAAAAEAAAAAAAhAB0AAAAEAAAAAAAgAB0AAAAEAAAAAAAgAAwAAAAEAAAAAAAhAAwAAAAEAAAAAAAeAB0AAAAAAAAAAAAfAB0AAAAAAAAAAAAeAAwAAAAAAAAAAAAfAAwAAAAAAAAAAAAoABQAAAACAAAAAAAoABUAAAACAAAAAAAXABQAAAACAAQAAAAXABUAAAACAAQAAAAVABMAAAADAAEAAAAVABQAAAADAAEAAAAVABUAAAADAAEAAAAVABYAAAADAAEAAAAqABMAAAABAAEAAAAqABQAAAABAAEAAAAqABUAAAABAAEAAAAqABYAAAABAAEAAAATABIAAAADAAEAAAAUABIAAAADAAEAAAAVABIAAAADAAEAAAATABcAAAADAAEAAAAUABcAAAADAAEAAAAVABcAAAADAAEAAAAqABIAAAABAAEAAAArABIAAAABAAEAAAAsABIAAAABAAEAAAAqABcAAAABAAEAAAArABcAAAABAAEAAAAsABcAAAABAAEAAAATAA0AAAAAAAIAAAATABwAAAAAAAIAAAATABsAAAAAAAQAAAAUABwAAAAAAAQAAAAUAA0AAAAAAAQAAFATAA4AAAAAAAQAAFArABwAAAAEAAQAAGAsABsAAAAEAAQAAGArAA0AAAAEAAQAADAsAA4AAAAEAAQAADAsABwAAAAEAAIAAAAsAA0AAAAEAAIAAAA=")
tile_set = ExtResource("4_slvla")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(323, 186)
texture = ExtResource("5_gmt2b")

[node name="Goal1" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="Goal1"]
position = Vector2(200, 210)
shape = SubResource("RectangleShape2D_1aicq")

[node name="Goal2" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="Goal2"]
position = Vector2(440, 210)
shape = SubResource("RectangleShape2D_1aicq")

[node name="SoccerBall" type="RigidBody2D" parent="."]
position = Vector2(320, 203)
collision_layer = 130
collision_mask = 67
mass = 1000.0
physics_material_override = SubResource("PhysicsMaterial_sxi5j")
gravity_scale = 0.0
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="SoccerBall"]
texture = ExtResource("6_sxi5j")

[node name="Area2D" type="Area2D" parent="SoccerBall"]
collision_layer = 128
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="SoccerBall/Area2D"]
shape = SubResource("CircleShape2D_slvla")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="SoccerBall"]
polygon = PackedVector2Array(-2, -5, 2, -5, 4, -4, 5, -2, 5, 2, 4, 4, 2, 5, -2, 5, -4, 4, -5, 2, -5, -2, -4, -4)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(320, 180)
zoom = Vector2(3, 3)

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 129

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(320, 212)
shape = SubResource("RectangleShape2D_sxi5j")

[node name="TimerLabel" type="Label" parent="."]
offset_left = 300.0
offset_top = 87.0
offset_right = 340.0
offset_bottom = 110.0
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="area_entered" from="Goal1" to="." method="_on_goal_1_area_entered"]
[connection signal="area_entered" from="Goal2" to="." method="_on_goal_2_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
